--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,5 +16,8 @@
  *
  * Used by blacklight_range_limit
  *= require  'blacklight_range_limit'
+ *= require  'grenander/headerNavbar'
+ *= require  'grenander/browseNav'
+ *= require  'grenander/searchSubnav'
  *
 */
