added custom styles just for mathes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,7 @@
  *= require  'grenander/navbar'
  *= require  'grenander/search-source'
  *= require  'grenander/footer'
+ *= require  'grenander/mathes'
  *
 */
 
