fixed home and favicon

--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -1,3 +1,5 @@
+<div class="card card-body">
+
 <table align="center" width="250">
 	<tbody>
 		<tr>
@@ -57,4 +59,6 @@
 	<div style="clear:both;"></div>
 <p>A <a href="http://www.albany.edu/~dlafonde/Africana/UGRRChildren.htm">bibliography</a> of some items dealing with or alluding to the Underground Railroad, ranging from 1856 to 1955, from the Mathes Collection was compiled by graduate assistant Karen Grimwood in 2003 to accompany the exhibit <em>Old Children&#39;s Books As Sources for Black History and Cultural Studies.</em> The items may give some insight into the way children were informed of this subject in the mainstream culture of that period.</p>
 <p>A complete list of the Department&#39;s online exhibits including several featuring items from the Mathes Collection is available at the Department&#39;s <a href="{{ site.url }}/exhibits">Exhibits</a> page.</p>
+</div>
+
 </div>
