--- a/app/views/catalog/_access.html.erb
+++ b/app/views/catalog/_access.html.erb
@@ -4,7 +4,7 @@
 		<h6 class="card-subtitle mb-2 text-muted">Rare books do not circulate</h6>
 		<p class="card-text">These materials must be viewed onsite in the Special Collections Reading Room.</p>
 		<p class="card-text">
-			<a href="https://archives.albany.edu/web/reference?visit=true&collection=Mathes&eadid=<%= @document._source["id"] %>&title=<%= @document._source["display_tesim"][0] %>" class="card-link btn btn-info">Schedule a Visit</a>
+			<a href="https://archives.albany.edu/web/reference?visit=true&collection=Mathes&eadid=<%= @document._source["id"] %>&title=<%= @document._source["title_tesim"][0] %>" class="card-link btn btn-info">Schedule a Visit</a>
 		</p>
 		<a href="https://archives.albany.edu/web/visit/" class="card-link">Using the Archives</a>
 		<a href="https://archives.albany.edu/web/directions/" class="card-link">Hours</a>
