added mathes and pamphlets pages

--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -1,7 +1,7 @@
-<div class="card card-body">
-
-<h1>Rare Books</h1>
-<ul>
+<div class="card">
+<div class="card-body">
+<h2 class="card-title">Rare Books</h2>
+<ul class="card-text">
     <li>Pre-1801 European and pre-1820 American printed books</li>
     <li>19th-century English illustrated books</li>
     <li>The Elzevier Collection of about 700 volumes from the printing offices of the Elzevier family, which flourished in the Dutch Republic between 1583 and 1702</li>
@@ -12,6 +12,6 @@
     <li>Substantively annotated books from the libraries of individuals whose papers are part of the Department's archival manuscript collections, particularly individuals from the German and Jewish Intellectual Émigré Collection.</li>
     <li>Ephemeral collections include European and American political pamphlets, propaganda, and other ephemeral publications on radical thought, socialism, communism, fascism, and other ideologies mostly from the 20th century; business history collection consisting of pamphlets, trade catalogs, ephemeral publications, and other materials pertaining to United States business history and practices since the nineteenth century, including American railroads, New York State business and industry, accounting, shorthand, expositions, and other subjects.</li>
 </ul>
-
+</div>
 </div>
 
