--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  
  *
  * Used by blacklight_range_limit
+ *= require  'font-awesome'
  *= require  'blacklight_range_limit'
  *= require  'grenander/main'
  *= require  'grenander/navbar'
@@ -95,4 +96,27 @@
 
 .blacklight-title_tesim {
   display: none;
+}
+
+
+.mathes-card .card-body figure img {
+	width: 250px;
+}
+
+
+.mathes-card .card-header {
+	cursor: pointer;
+	border-bottom: none;
+}
+
+.mathes-card .card-header a:not(.collapsed) .rotate-icon {
+	transform: rotate(180deg);
+}
+
+.mathes-card .card-header:hover {
+	background: #9e68c7;
+}
+
+.mathes-card .card-header:hover a {
+	color: #fff;
 }
