--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -14,6 +14,8 @@
       <%= render 'mathes' %>
     <% elsif params["f"]["collecting_area_ssim"][0] == "Political Pamphlets" %>
       <%= render 'pamphlets' %>
+    <% elsif params["f"]["collecting_area_ssim"][0] == "Rare Books" %>
+      <%= render 'home' %>
     <% else %>
       <%= render 'search_results' %>
     <% end %>
