updated pamphlets text

--- a/app/views/catalog/_pamphlets.html.erb
+++ b/app/views/catalog/_pamphlets.html.erb
@@ -3,7 +3,11 @@
                 <h2 class="card-title">Political Pamphlets</h2>
 
                 <p class="card-text">
-			This is an artificial collection of rare pamphlets on a wide variety of political topics. Originally, many of these materials were extracted from the German and Jewish Intellectual Émigré manuscript collections, a practice that unfortunately removed them from much of their original context and use. The collection was also added to over time, so many of the pamphlets also come from other sources. 
+			<ul>
+				<li>The department holds an artificial collection of more than 2,000 political pamphlets, dating predominantly from the 20th century, and originating from the United States, Europe, and Asia. </li>
+				<li>Topics discussed include labor rights, socialism, communism, racism, fascism, the arms race, conditions in prison, war, economics, and womens rights.</li>
+				<li>Many of these materials were extracted from German and Jewish Intellectual Émigré manuscript collections, a by-gone practice that unfortunately removed them from much of their original context and use. The collection was also added to over time, so pamphlets also come from other sources.</li>
+			</ul>
 		</p>
         </div>
 
