--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -29,7 +29,7 @@ The majority of rare books have author, title, and subject access. Currently, on
 	</li>
 	<ul>
 		<li>
-			<a href="https://libguides.library.albany.edu/c.php?g=537330&p=3677842s">Listing of facsimile reproductions of Mesoamerican codices</a>
+			<a href="https://libguides.library.albany.edu/c.php?g=537330&p=3677843">Listing of facsimile reproductions of Mesoamerican codices</a>
 		</li>
 	</ul>
 	<li>
