--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -7,7 +7,7 @@
   <%= render 'home' %>
   <%= render 'shared/sitelinks_search_box' %>
 <% else %>
-  <% if params.has_key?("search_field") %>
+  <% if params.has_key?("q") %>
     <%= render 'search_results' %>
   <% else %>
     <% if params.has_key?("f") %>
