--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -1,9 +1,15 @@
 <div class="card">
 <div class="card-body">
-<h2 class="card-title m-3">Rare Books</h2>
+<h2 class="card-title display-4 mt-3 ml-3">Rare Books</h2>
 <div class="card-text p-3">
+
+<p class="lead">
+	 Rare Books include several different collections, each with a different scope, purpose, and curatorial history.
+</p>
+
+
 <p class="card-text">
-	Rare Books include several different collections, each with a different scope, purpose, and curatorial history. One uniting principle is the rarity of a text, whether due to a scarcity of extant copies, or because of the annotations of someone important in the particular discipline. Several of our named collections, such as the Kosover, are housed together because of the insights gained from easily accessing similar materials. Ephemeral materials are housed in rare books because their impermanent nature makes them rare, and their being housed together helps them illuminate a historical period or time in intellectual history. 
+	One uniting principle is the rarity of a text, whether due to a scarcity of extant copies, or because of the annotations of someone important in the particular discipline. Several of our named collections, such as the Kosover, are housed together because of the insights gained from easily accessing similar materials. Ephemeral materials are housed in rare books because their impermanent nature makes them rare, and their being housed together helps them illuminate a historical period or time in intellectual history. 
 </p>
 
 <p class="card-text">
