--- a/app/views/catalog/_mathes.html.erb
+++ b/app/views/catalog/_mathes.html.erb
@@ -1,6 +1,8 @@
 <div class="card mathes-card">
 	<div class="card-body">
-		<h2>Miriam Snow Mathes Historical Children's Literature Collection</h2>
+		<h2 class="card-title display-4 m-3">Mathes Historical Children's Literature Collection</h2>
+
+		<p class="lead ml-3">The Miriam Snow Mathes Historical Children's Literature Collection includes upwards of 17,000 children's books and periodicals published in the 19th century and up to 1960.</p>
 
 		<div class="text-center">
 		<figure class="figure">
@@ -8,7 +10,6 @@
 			<figcaption class="figure-caption"><em>Large Letters for the Little Ones</em>, Edmund Evans, 1865?</figcaption>
 		</figure>
 		</div>
-
 
 		<div id="accordion">
   <div class="card">
@@ -21,7 +22,7 @@
     </div>
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
       <div class="card-body">
-        <p>The Miriam Snow Mathes Historical Children's Literature Collection includes upwards of 17,000 children's books and periodicals published in the 19th century and up to 1960. The collection is strong in the literature of the first half of the 20th century, but there is also extensive coverage of the 19th century, the latter half in particular. There is an especially strong concentration on neglected and forgotten works published in the United States, 1875-1960. The central purpose of the Mathes Collection is to provide the texts of works that are generally no longer available in children's library collections today-and to make them available for historical, literary and cultural study and consultation by scholars, students, teachers, librarians and the interested public. The collection serves not only research in history of childrens literature, but also in social and cultural history, in publishing history, and in art history (illustration and book design).</p>
+        <p>The collection is strong in the literature of the first half of the 20th century, but there is also extensive coverage of the 19th century, the latter half in particular. There is an especially strong concentration on neglected and forgotten works published in the United States, 1875-1960. The central purpose of the Mathes Collection is to provide the texts of works that are generally no longer available in children's library collections today-and to make them available for historical, literary and cultural study and consultation by scholars, students, teachers, librarians and the interested public. The collection serves not only research in history of childrens literature, but also in social and cultural history, in publishing history, and in art history (illustration and book design).</p>
 		<p>The Mathes Collection is named for Miriam Snow Mathes, Class of 1926, who had a continuing interest in the Historical Children's Literature Collection. Ms. Mathes, who was a lifelong student, librarian, and teacher of children's literature, established an endowment fund in 1993 to provide continuing support for the collection. Materials for the Miriam Snow Mathes Historical Children's Literature Collection are acquired in three categories:</p>
         <div class="col-lg-10 col-lg-offset-1 col-md-12  col-sm-12 col-xs-12">
         <blockquote>
