updated using the archives link

--- a/app/views/catalog/_access.html.erb
+++ b/app/views/catalog/_access.html.erb
@@ -6,7 +6,7 @@
 		<p class="card-text">
 			<a href="https://archives.albany.edu/web/reference?visit=true&collection=Mathes&eadid=<%= @document._source["id"] %>&title=<%= @document._source["title_tesim"][0] %>" class="card-link btn btn-info">Schedule a Visit</a>
 		</p>
-		<a href="https://archives.albany.edu/web/visit/" class="card-link">Using the Archives</a>
+		<a href="https://archives.albany.edu/web/about/" class="card-link">Using the Archives</a>
 		<a href="https://archives.albany.edu/web/directions/" class="card-link">Hours</a>
 	</div>
 	
