upgrated to blacklight 8

--- a/app/assets/stylesheets/font-awesome-sprockets.scss
+++ b/app/assets/stylesheets/font-awesome-sprockets.scss
@@ -1,2 +1,3 @@
 // Font Awesome Sprockets compatibility shim for font-awesome-sass
 // This allows grenander's @import "font-awesome-sprockets" to work with font-awesome-sass
+@import "font-awesome";
