--- a/app/views/catalog/_mathes.html.erb
+++ b/app/views/catalog/_mathes.html.erb
@@ -1,8 +1,8 @@
 <div class="card mathes-card">
 	<div class="card-body">
-		<h2 class="card-title display-4 m-3">Mathes Historical Children's Literature Collection</h2>
+		<h1 class="card-title display-4 m-3">Mathes Historical Children's Literature Collection</h1>
 
-		<p class="lead ml-3">The Miriam Snow Mathes Historical Children's Literature Collection includes upwards of 17,000 children's books and periodicals published in the 19th century and up to 1960.</p>
+		<p class="lead ms-3">The Miriam Snow Mathes Historical Children's Literature Collection includes upwards of 17,000 children's books and periodicals published in the 19th century and up to 1960.</p>
 
 		<div class="text-center">
 		<figure class="figure">
@@ -11,17 +11,15 @@
 		</figure>
 		</div>
 
-		<div id="accordion">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <a class="btn btn-block p-2 text-left collapse-toggle" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-      <h5 class="mb-0">
-          Scope and Content <i class="fa fa-angle-down rotate-icon pull-right"></i>
-      </h5>
-      </a>
-    </div>
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-      <div class="card-body">
+		<div class="accordion" id="accordion">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Scope and Content
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion">
+      <div class="accordion-body">
         <p>The collection is strong in the literature of the first half of the 20th century, but there is also extensive coverage of the 19th century, the latter half in particular. There is an especially strong concentration on neglected and forgotten works published in the United States, 1875-1960. The central purpose of the Mathes Collection is to provide the texts of works that are generally no longer available in children's library collections today-and to make them available for historical, literary and cultural study and consultation by scholars, students, teachers, librarians and the interested public. The collection serves not only research in history of childrens literature, but also in social and cultural history, in publishing history, and in art history (illustration and book design).</p>
 		<p>The Mathes Collection is named for Miriam Snow Mathes, Class of 1926, who had a continuing interest in the Historical Children's Literature Collection. Ms. Mathes, who was a lifelong student, librarian, and teacher of children's literature, established an endowment fund in 1993 to provide continuing support for the collection. Materials for the Miriam Snow Mathes Historical Children's Literature Collection are acquired in three categories:</p>
         <div class="col-lg-10 col-lg-offset-1 col-md-12  col-sm-12 col-xs-12">
@@ -34,32 +32,28 @@
       </div>
     </div>
   </div>
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <a class="btn btn-block p-2 text-left collapse-toggle collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-      <h5 class="mb-0">
-          History of the Mathes Collection <i class="fa fa-angle-down rotate-icon pull-right"></i>
-      </h5>
-      </a>
-    </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-      <div class="card-body">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        History of the Mathes Collection
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
+      <div class="accordion-body">
         <p>The Miriam Snow Mathes Historical Children's Literature Collection has its roots in the State College at Albany's Department of Librarianship established in the late 1920s. Books donated by the faculty created a small historical children's literature collection. There was also a small collection of &quot;bad examples,&quot; the so-called Black Star Collection; these items were popular children's books, especially series books, which were considered to be below an acceptable level of literary quality.</p>
         <p>The Mathes Collection grew very slowly, but in the 1960s and 1970s, with funds for purchase, and the subsequent inclusion of the Library School library within the University Libraries, the pace of collecting by both gift and purchase accelerated. An important collection of early 19th century children's books (about 700 volumes, not including subsequent donations in later years) came from the estate of Dr. H. Jackson Davis, a book collector whose son, Jackson Davis, is a Class of 1970 library school alumnus.</p>
         <p>In the 1980s grants were obtained for cataloging and promoting the Mathes Collection, which, by then, was part of the M.E. Grenander Department of Special Collections and Archives. A special online thesaurus and a computer-based subject index were developed by David Mitchell, Curator pro bono for the Mathes Collection and former faculty member of the School of Information Science and Policy. In the 1990s new acquisitions continued by purchase (e.g., children's books from the 1930s to the 1950s featuring African American protagonists) with alumni class monetary donations and by gift (e.g., a prime assortment of early 20th century items from Harriet Dyer Adams, Class of 1960). And, most significantly, the collection has received the guarantee of moderate but sustained purchasing power through the generosity of the endowment established by the late Miriam Snow Mathes.</p>
       </div>
     </div>
   </div>
-  <div class="card">
-    <div class="card-header" id="headingThree">
-      <a class="btn btn-block p-2 text-left collapse-toggle collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-      <h5 class="mb-0">
-          Some Highlights of the Mathes Collection <i class="fa fa-angle-down rotate-icon pull-right"></i>
-      </h5>
-      </a>
-    </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-      <div class="card-body">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Some Highlights of the Mathes Collection
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordion">
+      <div class="accordion-body">
         <p>Certain types of publications and subject areas are emphasized within the Mathes Collection. A search of the current database reveals some examples:</p>
         <div class="col-lg-10 col-lg-offset-1 col-md-12  col-sm-12 col-xs-12">
         <blockquote>
@@ -73,16 +67,14 @@
       </div>
     </div>
   </div>
-  <div class="card">
-    <div class="card-header" id="headingFour">
-      <a class="btn btn-block p-2 text-left collapse-toggle collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
-      <h5 class="mb-0">
-          Access to the Mathes Collection <i class="fa fa-angle-down rotate-icon pull-right"></i>
-      </h5>
-      </a>
-    </div>
-    <div id="collapseFour" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-      <div class="card-body">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingFour">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+        Access to the Mathes Collection
+      </button>
+    </h2>
+    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordion">
+      <div class="accordion-body">
         <p>All materials are available for consultation in the M.E. Grenander Department of Special Collections and Archives Brown Research Room.</p>
         <p>Bibliographic access by known-item searches of authors and titles is available through the University Libraries' online catalog catalog although that does not include a considerable backlog of uncatalogued items. Also, most materials are cataloged and entered in the RLIN and/or OCLC national databases. Because most fiction for children received very little or cursory subject cataloging in the past, subject access to these older materials through the library's online system and the national databases is limited. However, the Department maintains a separate in-house, computer-based index for materials in the Mathes Collection which is now available online and includes all uncatalogued material. New records in the in-house index are added to the online index periodically. Each book is indexed carefully, using a specially developed vocabulary (reflecting genre, format, types of characters, settings, etc.). Searches also can be done by chronological period, and all search results are sorted by date of origin or publication.</p>
       </div>
