--- a/app/views/catalog/_pamphlets.html.erb
+++ b/app/views/catalog/_pamphlets.html.erb
@@ -1,8 +1,8 @@
 <div class="card">
         <div class="card-body">
-                <h2 class="card-title display-4 mt-3 ml-3">Political Pamphlets</h2>
+                <h1 class="card-title display-4 mt-3 ms-3">Political Pamphlets</h1>
 
-		<p class="lead ml-3">The department holds an artificial collection of more than 2,000 political pamphlets, dating predominantly from the 20th century, and originating from the United States, Europe, and Asia.</p>
+		<p class="lead ms-3">The department holds an artificial collection of more than 2,000 political pamphlets, dating predominantly from the 20th century, and originating from the United States, Europe, and Asia.</p>
 
                 <p class="card-text">
 			<ul>
