--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,27 @@ input#q {
 	background-color: #fff !important;
 }
 
+/* Accordion styling */
+.accordion-button {
+	font-size: 1.25rem;
+	font-weight: 500;
+}
+
+.accordion-button:not(.collapsed) {
+	background-color: #EBE6F0;
+	color: #46166B;
+	box-shadow: none;
+}
+
+.accordion-button:focus {
+	box-shadow: none;
+	border-color: rgba(0,0,0,.125);
+}
+
+.accordion-item:not(:last-child) .accordion-button:not(.collapsed) {
+	border-bottom: 1px solid rgba(0,0,0,.125);
+}
+
 .access-card {
 	margin-top: 2rem;
 	box-shadow: none !important;
@@ -131,4 +152,30 @@ input#q {
 	color: #fff;
 	background-color: #117a8b;
 	border-color: #10707f;
+}
+
+.blacklight-catalog-show .pagination-search-widgets {
+	display: none;
+}
+
+.btn-link.advanced-search-start-over {
+	color: #fff;
+	background-color: #6c757d;
+	border-color: #6c757d;
+	text-decoration: none;
+}
+
+.btn-link.advanced-search-start-over:hover,
+.btn-link.advanced-search-start-over:focus {
+	color: #fff;
+	background-color: #5a6268;
+	border-color: #545b62;
+	text-decoration: none;
+}
+
+.btn-link.advanced-search-start-over:active,
+.btn-link.advanced-search-start-over.active {
+	color: #fff;
+	background-color: #545b62;
+	border-color: #4e555b;
 }
