--- a/app/views/catalog/_access.html.erb
+++ b/app/views/catalog/_access.html.erb
@@ -1,7 +1,7 @@
 <div class="card access-card">
 	<div class="card-body">
-		<h5 class="card-title">Access</h5>
-		<h6 class="card-subtitle mb-2 text-muted">Rare books do not circulate</h6>
+		<h2 class="card-title h5">Access</h2>
+		<div class="card-subtitle mb-2 text-muted">Rare books do not circulate</div>
 		<p class="card-text">These materials must be viewed onsite in the Special Collections Reading Room.</p>
 		<p class="card-text">
 			<a href="https://archives.albany.edu/web/reference?visit=true&collection=Mathes&eadid=<%= @document._source["id"] %>&title=<%= @document._source["title_tesim"][0] %>" class="card-link btn btn-info">Schedule a Visit</a>
