--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
 <div class="card-body">
-<h2 class="card-title display-4 mt-3 ml-3">Rare Books</h2>
+<h1 class="card-title display-4 mt-3 ms-3">Rare Books</h1>
 <div class="card-text p-3">
 
 <p class="lead">
